Fix header spacing as well, slightly reduce logo size

--- a/src/scss/components/_components.header.scss
+++ b/src/scss/components/_components.header.scss
@@ -9,7 +9,7 @@ $header-background-color: $color-black;
     @include clearfix;
 
     position: relative;
-    padding: $spacing-unit--small $spacing-unit;
+    padding: $spacing-unit--small;
     background-color: $header-background-color;
     text-align: center;
 }
