--- a/src/scss/components/_components.logo.scss
+++ b/src/scss/components/_components.logo.scss
@@ -3,7 +3,7 @@
    ========================================================================== */
 
 // Internal variables.
-$logo-width: 200px;
+$logo-width: 160px;
 
 .c-logo {
     float: left;
